feat(BlazorFirstTry): Game miner v0.1

--- a/BlazorFirstTry/_Imports.razor
+++ b/BlazorFirstTry/_Imports.razor
@@ -9,3 +9,6 @@
 @using BlazorFirstTry
 @using BlazorFirstTry.Layout
 @using BlazorFirstTry.Component
+@using BlazorFirstTry.Component.MinerGame
+@using BlazorFirstTry.Models
+@using BlazorFirstTry.Models.Enums
