--- a/BlazorFirstTry/_Imports.razor
+++ b/BlazorFirstTry/_Imports.razor
@@ -12,3 +12,4 @@
 @using BlazorFirstTry.Component.MinerGame
 @using BlazorFirstTry.Models
 @using BlazorFirstTry.Models.Enums
+@using BlazorFirstTry.Tools
