--- a/BlazorFirstTry/Pages/Home.razor
+++ b/BlazorFirstTry/Pages/Home.razor
@@ -5,9 +5,9 @@
 <h1>Hello, world!</h1>
 
 @* <Pendu></Pendu> *@
-@* <Board></Board> *@
+<Board></Board>
 
 
 @* <BoardSecondVersion /> *@
 
-<DinoList />
+@* <DinoList /> *@
